    predicates for breaking object encapsulation. In addition, defining
    clauses for a multifile Entity::Functor/Arity without a corresponding
    multifile/1 directive will now result in a compilation error instead
    of simply a warning.

    Removed the Logtalk compiler restriction that forced discontiguous/1
    and dynamic/1 directives to precede calls to the declared predicates.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Changed the internal predicates used in the implementation of the built-in
    multi-threading predicates in order to facilitate the integration with
    high-level debugging tools that require decompilation of the generated
    Prolog code.

    Corrected a bug introduced in Logtalk 2.42.4 on the compilation of entity
    predicates that call synchronized predicates. This bug resulted in calls
    being made instead to the non-synchronized forms of the predicates, which
    would manifest in random failures of thread goals.

    Refined error checking for the built-in predicates category_property/2,
    object_property/2, and protocol_property/2, throwing a type_error/2 when
    the second argument is neither a variable or a callable term.

    For all config files, renamed the predicate '$lgt_is_proper_list'/1 to
    '$lgt_is_list'/1 and and replaced the old '$lgt_is_list'/1 predicate by
    a new '$lgt_is_list_or_partial_list'/1 predicate.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory. In addition, add source location information
    to the generated Prolog files resulting from the compilation of Logtalk
    source files. This location information is necessary for supporting some
    of the SWI-Prolog development tools.
